[package]
name = "projection-finance-trading-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Projection Finance trading bot — built on the Prediction Market Toolkits engine."
repository = "https://github.com/HarrierOnChain/Projection-Finance"

[[bin]]
name = "projection-finance-bot"
path = "src/main.rs"

[dependencies]
# Shared execution core, risk layer, and strategy implementations.
polymarket-toolkits = { git = "https://github.com/HarrierOnChain/Prediction-Markets-Trading-Bot-Toolkits" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Pin the TUI stack to the engine's versions. Without this, fresh dependency
# resolution can pull crossterm/ratatui 0.29 transitively while the engine uses
# 0.28, producing two crossterm versions and a macro type clash at build time.
crossterm = "=0.28.1"
ratatui = "=0.28.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
